# Compendium

./: README.md  com.wolfteck.Compendium.json  compendium.py  meson.build
data/: com.wolfteck.Compendium.appdata.xml.in  com.wolfteck.Compendium.desktop.in  com.wolfteck.Compendium.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: compendium.gresource.xml  compendium.in  finance.py  main.py  main.vala  meson.build  window.py  window.ui  window.vala
src/finance/: account.py  finance_tab.py
src/tabs/: finance.vala  house.vala  pool.vala  vehicle.vala  wishlist.vala
